# jbuf-fetcher

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  species_list.csv  tox.ini
jbuf_fetcher/: botavista_fetcher.py  data_processing.py  directus_fetcher.py  fetcher_directus.py  html_generator.py  launcher.sh  old_styles.css  project_mappings.json  scripts.js  species_list.csv  styles.css  taxo_resolver.py  test.py  tests_html.py  utils.py  utils.pyi  web_page.py
jbuf_fetcher/styles/: components.css  containers.css  global.css  layout.css  responsive.css
tests/: test_foo.py
