[tool.poetry]
name = "jbuf_fetcher"
version = "0.0.1"
description = "blablabla"
authors = ["Héloïse Coen <heloise.coen@gmail.com>"]
repository = "https://github.com/HeloiseCoen/jbuf-fetcher"
documentation = "https://HeloiseCoen.github.io/jbuf-fetcher/"
readme = "README.md"
packages = [
  {include = "jbuf_fetcher"}
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
datacompy = "^0.16.4"
pandas = "^2.2.3"
requests = "^2.32.3"
dotenv = "^0.9.9"
yattag = "^1.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^6.0.0"
deptry = "^0.16.2"
mypy = "^1.15.0"
pre-commit = "^3.4.0"
tox = "^4.11.1"
fugue = "^0.9.1"
snowflake-connector-python = "^3.14.0"
types-requests = "^2.32.0.20250306"
pandas-stubs = "^2.2.3.250308"



[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["jbuf_fetcher"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    # LineTooLong
    "E501",
    # DoNotAssignLambda
    "E731",
]

[tool.ruff.format]
preview = true



[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
